dlama-webapp/base/service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d-lama-webapp
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: 'RollingUpdate'
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 100%
  selector:
    matchLabels:
      logoutfmt: json
      app.kubernetes.io/component: deployment
  template:
    metadata:
      labels:
        logoutfmt: json
        app.kubernetes.io/component: deployment
    spec:
      imagePullSecrets:
        - name: dockerhub-pull-secret
      containers:
        - name: d-lama-webapp
          image: d-lama-webapp-image
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
